[FEAT] Add Finalisation